# tcpchat

./: Cargo.toml
client/: Cargo.toml
client/src/: channel_logger.rs  lib.rs  main.rs  server.rs  ui.rs
common/: Cargo.toml
common/src/: buffer.rs  codec.rs  commands.rs  connection.rs  lib.rs
server/: Cargo.toml
server/src/: client.rs  lib.rs  main.rs  server.rs
src/client/: mod.rs  server.rs
src/common/: connection.rs  mod.rs
src/server/: client.rs  server.rs
