[workspace]
resolver = "2"
members = [
  "client",
  "server",
  "common"
]

# [lints.rust]
# missing_debug_implementations = "warn"
# trivial_casts = "warn"
# trivial_numeric_casts = "warn"
# unit_bindings = "warn"
# unreachable_pub = "warn"
# unsafe_op_in_unsafe_fn = "deny"
# unused_extern_crates = "warn"
# unused_import_braces = "warn"
# unused_lifetimes = "warn"
# unused_macro_rules = "warn"
# unused_qualifications = "warn"
# variant_size_differences = "warn"

# [lints.clippy]
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
# missing_errors_doc = "allow"
# module_inception = "allow"
